@@ -1,0 +1,8 @@
+Trace: &newInstance(@(interface java.util.List, interface java.util.Set), &closure[debugproxy.sl:9]#1) = [&closure[debugproxy.sl:9]#1 as java.util.List, java.util.Set] at debugproxy.sl:9
+Warning: Method called: add @('x') at debugproxy.sl:9
+Trace: [&closure[debugproxy.sl:9]#1 add: 'x'] = $null at <Java>:-1
+Trace: [[&closure[debugproxy.sl:9]#1 as java.util.List, java.util.Set] add: 'x'] = 0 at debugproxy.sl:10
+Trace: &newInstance(interface java.util.List, &closure[debugproxy.sl:12]#2) = [&closure[debugproxy.sl:12]#2 as java.util.List] at debugproxy.sl:12
+Warning: Method called: add @('x') at debugproxy.sl:12
+Trace: [&closure[debugproxy.sl:12]#2 add: 'x'] = $null at <Java>:-1
+Trace: [[&closure[debugproxy.sl:12]#2 as java.util.List] add: 'x'] = 0 at debugproxy.sl:13
